--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="description" content="В нашей лаборатории можно сдать воду на анализ из водопроводной сети, колодца и других источников. Лаборатория Аналитический центр МГУ имеет аккредитацию Федеральной службы по аккредитации РФ для проведения исследований водных масс, почв, аэрозолей и продуктов питания. Телефон в Москве 8 495 939-25-36." />
     <meta http-equiv="refresh" content="0;URL=https://eco.chem.msu.ru" />
   </head>
 </html>
